--- a/.surge.conf
+++ b/.surge.conf
@@ -24,7 +24,7 @@ external-controller-access = password@0.0.0.0:6170
 # 🇺🇸US = https,adc-us.com,443,username,password, tls=true
 # 🇼🇸TW = https,adc-tw.com,443,username,password, tls=true
 # 🇰🇷KR = https,adc-kr.com,443,username,password, tls=true
-Proxy = custom, 54.199.223.186, 8989, aes-265-cfb, 19840330, http://custom/ss.module
+Proxy = custom, 54.199.223.186, 8989, aes-265-cfb, 19840330, https://ii-i.org/SSEncrypt.module
 
 [Proxy Group]
 # Auto = url-test,🇭🇰HK,🇯🇵JP,🇼🇸TW, url = http://www.gstatic.com/generate_204
