added http proxy in surge.conf

--- a/surge/surge.conf
+++ b/surge/surge.conf
@@ -2,6 +2,9 @@
 loglevel = notify
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, ::ffff:0:0:0:0/1, ::ffff:128:0:0:0/1
 bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
+interface = 0.0.0.0
+port = 8888
+socks-port = 8889
 
 # dns-server = 119.29.29.29,223.5.5.5,114.114.115.115
 # external-controller-access = PASSWORD@0.0.0.0:6155
@@ -18,6 +21,7 @@ Direct = direct
 # Proxy1 = http,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy2 = https,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy3 = socks,$IP,$PORT,$USERNAME,$PASSWORD
+XGJ = http,114.55.179.7,52373,churui.ctec,11505982
 SS = custom,54.199.223.186,8989,rc4-md5,19840330,https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
 
 // CUSTOM ALMOST MEANS, SHADOWSOCKS. YOU HAVE TO GET THE SHADOWSOCKS MODULE BEFORE USING SHADOWSOCKS PROXY, HERE'S ONE: https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
@@ -31,10 +35,11 @@ SS = custom,54.199.223.186,8989,rc4-md5,19840330,https://dl.dropboxusercontent.c
 
 [Proxy Group]
 
-Proxy = select, Direct, SS
+Proxy = select, Direct, SS, XGJ
 # Proxy = select, AutoGroup, Direct, Proxy1, Proxy2, Proxy3, Proxy4, Proxy5, Proxy6, Proxy7
 
 # AutoGroup = url-test, Proxy1, Proxy2, Proxy3, Proxy4, Proxy5, Proxy6, Proxy7, url = http://www.gstatic.com/generate_204
+AutoGroup = url-test, SS, XGJ, url = http://www.gstatic.com/generate_204
 
 # SSID-Group = ssid, default = Proxy1, cellular = Proxy2, WiFi-SSID-NAME1 = Proxy 3 ,WiFi-SSID-NAME2 = DIRECT
 
