--- a/surge/surge.conf
+++ b/surge/surge.conf
@@ -21,7 +21,7 @@ Direct = direct
 # Proxy1 = http,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy2 = https,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy3 = socks,$IP,$PORT,$USERNAME,$PASSWORD
-XGJ = https,114.55.179.7,52373,churui.ctec,11505982
+XGJ = http,114.55.179.7,52373,churui.ctec,11505982
 SS = custom,54.199.223.186,8989,rc4-md5,19840330,https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
 
 // CUSTOM ALMOST MEANS, SHADOWSOCKS. YOU HAVE TO GET THE SHADOWSOCKS MODULE BEFORE USING SHADOWSOCKS PROXY, HERE'S ONE: https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
