--- a/surge/surge.conf
+++ b/surge/surge.conf
@@ -22,10 +22,13 @@ Direct = direct
 # Proxy2 = https,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy3 = socks,$IP,$PORT,$USERNAME,$PASSWORD
 XGJ = http,114.55.179.7,52373,churui.ctec,11505982
-SS = custom,54.199.223.186,8989,rc4-md5,19840330,https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
+🇭🇰T香港= custom,thk.nodie.cf,11782,rc4-md5,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+🇸🇬T新加坡= custom,tsg.nodie.cf,11782,rc4-md5,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module 
+🇯🇵T日本= custom,tjp.nodie.cf,11782,rc4-md5,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+🇺🇸T美国= custom,tus.nodie.cf,11782,rc4-md5,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+
 
 // CUSTOM ALMOST MEANS, SHADOWSOCKS. YOU HAVE TO GET THE SHADOWSOCKS MODULE BEFORE USING SHADOWSOCKS PROXY, HERE'S ONE: https://dl.dropboxusercontent.com/u/760466/SSEncrypt.module
-
 // YOU CAN ADD LOTS OF PROXIES HERE.
 
 # [SSID Setting]
@@ -34,12 +37,11 @@ SS = custom,54.199.223.186,8989,rc4-md5,19840330,https://dl.dropboxusercontent.c
 // YOU CAN SUSPEND SURGE ON CERTAIN WIFI
 
 [Proxy Group]
+Proxy = select,自动切换,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国
+自动切换 = url-test,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国,url = http://www.gstatic.com/generate_204
 
-Proxy = select, Direct, SS, XGJ
 # Proxy = select, AutoGroup, Direct, Proxy1, Proxy2, Proxy3, Proxy4, Proxy5, Proxy6, Proxy7
-
 # AutoGroup = url-test, Proxy1, Proxy2, Proxy3, Proxy4, Proxy5, Proxy6, Proxy7, url = http://www.gstatic.com/generate_204
-AutoGroup = url-test, SS, XGJ, url = http://www.gstatic.com/generate_204
 
 # SSID-Group = ssid, default = Proxy1, cellular = Proxy2, WiFi-SSID-NAME1 = Proxy 3 ,WiFi-SSID-NAME2 = DIRECT
 
