edited .bash_profile and surge.conf

--- a/surge/churui.conf
+++ b/surge/churui.conf
@@ -15,10 +15,11 @@ socks-port = 8889
 🇸🇬T新加坡= custom,tsg.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module 
 🇯🇵T日本= custom,tjp.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
 🇺🇸T美国= custom,tus.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+💊DIRECT = direct
 
 
 [Proxy Group]
-Proxy = select,自动切换,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国
+Proxy = select,自动切换,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国, 💊DIRECT
 自动切换 = url-test,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国,url = http://www.gstatic.com/generate_204
  
 
