--- a/surge/churui.conf
+++ b/surge/churui.conf
@@ -11,16 +11,15 @@ socks-port = 8889
 
 
 [Proxy]
-🇭🇰T香港= custom,thk.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
-🇸🇬T新加坡= custom,tsg.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module 
-🇯🇵T日本= custom,tjp.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
-🇺🇸T美国= custom,tus.nodie.cf,11782,aes-256-cfb,p6rIKj,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
-💊DIRECT = direct
-
+🇭🇰H香港1= custom,hk1.nodie.cf,7339,rc4-md5,iPcJ9y,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+🇭🇰H香港2= custom,hk2.nodie.cf,7339,rc4-md5,iPcJ9y,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
+🇸🇬H新加坡1= custom,hsg.nodie.cf,7339,rc4-md5,iPcJ9y,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module 
+🇸🇬H新加坡2= custom,hsg1.nodie.cf,7339,rc4-md5,iPcJ9y,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module 
+🇯🇵H日本= custom,hjp1.nodie.cf,7339,rc4-md5,iPcJ9y,https://coding.net/u/chinafeng/p/Surge_Conf/git/raw/master/SSEncrypt.module
 
 [Proxy Group]
-Proxy = select,自动切换,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国, 💊DIRECT
-自动切换 = url-test,🇭🇰T香港,🇸🇬T新加坡,🇯🇵T日本,🇺🇸T美国,url = http://www.gstatic.com/generate_204
+Proxy = select,自动切换,🇭🇰H香港1,🇭🇰H香港2,🇸🇬H新加坡1,🇯🇵H日本
+自动切换 = url-test,🇭🇰H香港1,🇭🇰H香港2,🇸🇬H新加坡1,🇯🇵H日本,url = http://www.gstatic.com/generate_204
  
 
 [Rule]
