--- a/surge/main.conf
+++ b/surge/main.conf
@@ -23,8 +23,8 @@ socks-port = 8889
 💊DIRECT = direct
 
 [Proxy Group]
-Proxy = select,💊DIRECT,自动切换,🇭🇰H香港1,🇭🇰H香港2,🇯🇵H日本,🇯🇵AWS日本,🇸🇬H新加坡1
-自动切换 = url-test,🇭🇰H香港1,🇭🇰H香港2,🇯🇵H日本,🇯🇵AWS日本,🇸🇬H新加坡1,url = http://www.gstatic.com/generate_204
+Proxy = select,💊DIRECT,🇯🇵AWS日本,自动切换,🇭🇰H香港1,🇭🇰H香港2,🇯🇵H日本,🇸🇬H新加坡1
+自动切换 = url-test,🇭🇰H香港1,🇭🇰H香港2,🇯🇵H日本,🇸🇬H新加坡1,url = http://www.gstatic.com/generate_204
 
 # SSID-Group = ssid, default = Proxy1, cellular = Proxy2, WiFi-SSID-NAME1 = Proxy 3 ,WiFi-SSID-NAME2 = DIRECT
 
@@ -70,6 +70,7 @@ DOMAIN-SUFFIX,ib.adnxs.com,REJECT
 
 DOMAIN-KEYWORD,instagram,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
+DOMAIN-KEYWORD,googleadservices,Proxy
 DOMAIN-KEYWORD,google,Proxy,force-remote-dns
 DOMAIN-KEYWORD,facebook,Proxy,force-remote-dns
 DOMAIN-KEYWORD,youtube,Proxy,force-remote-dns
